<resources>
    <string name="app_name">Licenseverifer</string>
    <string name="action_settings">Settings</string>
    <string name="explanation">Explanation text</string>
    <string name="last_name_label">Last Name</string>
    <string name="first_name_label">First Name</string>
    <string name="date_of_birth_label">Date of Birth</string>
    <string name="address_label">Address</string>
    <string name="city_label">City</string>
    <string name="state_label">State</string>
    <string name="zip_label">Zip</string>
    <string name="license_number_label">License Number</string>
    <string name="signup">Signup</string>
</resources>
