<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/first_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name_label"
                android:textSize="50px" />

            <EditText
                android:id="@+id/first_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/first_name_text"
                android:layout_weight="1"
                android:gravity="left|center_vertical"

                android:inputType="textEmailAddress"
                android:textSize="50px" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/last_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/last_name_label"
                android:textSize="50px" />

            <EditText
                android:id="@+id/last_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/last_name_text"
                android:layout_weight="1"
                android:gravity="left|center_vertical"

                android:inputType="textEmailAddress"
                android:textSize="50px" />

        </LinearLayout>

        <!-- Date of Birth -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date_of_birth_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/date_of_birth_label"
                android:textSize="50px" />

            <EditText
                android:id="@+id/date_of_birth_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/date_of_birth_text"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:inputType="textEmailAddress"
                android:textSize="50px" />

        </LinearLayout>
        <!-- End Date of Birth -->

        <!-- Address -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/address_label"
                android:textSize="50px" />

            <EditText
                android:id="@+id/address_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/address_text"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:inputType="textEmailAddress"
                android:textSize="50px" />

        </LinearLayout>
        <!-- End Address -->

        <!-- City -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/city_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/city_label"
                android:textSize="50px" />

            <EditText
                android:id="@+id/city_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/city_text"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:inputType="textEmailAddress"
                android:textSize="50px" />

        </LinearLayout>
        <!-- End City -->

        <!-- State -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/state_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/state_label"
                android:textSize="50px" />

            <EditText
                android:id="@+id/state_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/state_text"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:inputType="textEmailAddress"
                android:textSize="50px" />

        </LinearLayout>
        <!-- End State -->


        <!-- Zip -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/zip_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/zip_label"
                android:textSize="50px" />

            <EditText
                android:id="@+id/zip_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/zip_text"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:inputType="number"
                android:textSize="50px" />

        </LinearLayout>
        <!-- End Zip -->

        <!-- License -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/license_number_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/license_number_label"
                android:textSize="50px" />

            <EditText
                android:id="@+id/license_number_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/license_number_text"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:inputType="number"
                android:textSize="50px" />

        </LinearLayout>
        <!-- End License -->

    <!-- Submit Application -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="20dp"
            android:background="#0099FF"
            android:text="@string/signup"
            android:textColor="#FFFFFF" />


    </LinearLayout>




    </LinearLayout>

    <!--


        <TextView
            android:id="@+id/last_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/first_name_label"
            android:text="@string/last_name_label"
            android:textSize="50px" />

        <EditText
            android:id="@+id/last_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/last_name_label"
            android:layout_marginLeft="10px"
            android:layout_toRightOf="@+id/last_name_label"
            android:inputType="textEmailAddress"
            android:textSize="50px" />



        <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
            android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
                android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <include layout="@layout/content_main" />

        <android.support.design.widget.FloatingActionButton android:id="@+id/fab"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_gravity="bottom|end" android:layout_margin="@dimen/fab_margin"
            android:src="@android:drawable/ic_dialog_email" />
    -->

</RelativeLayout>
